# django-template-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  entrypoint.sh  example.env  pyproject.toml
app/: entrypoint.sh  settings.py
app/config/: settings.py  urls.py  wsgi.py
app/core/: urls.py  views.py
app/core/templates/core/: 404.html  base.html  index.html
