[tool.poetry]
name = "django-template-project"
version = "0.1.0"
description = ""
authors = ["André Nordström <33100278+andreedd@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "B", "Q", "A"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
